--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "inquirer": "^8.2.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.16",
+    "pdfmake": "^0.2.5",
     "sequelize": "^6.20.1"
   }
 }
